--- a/billedgalleri.html
+++ b/billedgalleri.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/general.css" />
-    <link rel="stylesheet" href="css/rejse.css" />
-    <title>Rejse til DR Congo</title>
+    <link rel="stylesheet" href="css/billedgalleri.css" />
+    <title>Nyheder</title>
   </head>
   <body>
     <header>
@@ -68,10 +68,34 @@
       </nav>
     </header>
     <main>
-      <section class="rejse_video">
-        <video autoplay controls width="600">
-          <source src="img/Rejsen til DR Congo 2024.mp4" type="video/mp4" />
-        </video>
+      <h1>BILLEDER FRA CONGO TAGET AF GINA</h1>
+      <section class="til_mobil">
+        <img src="img/galleri/foto1.png" alt="foto1" />
+        <img src="img/galleri/foto2.png" alt="foto2" />
+        <img src="img/galleri/foto3.png" alt="foto3" />
+        <img src="img/galleri/foto4.png" alt="foto4" />
+        <img src="img/galleri/foto5.png" alt="foto5" />
+        <div>
+          <button class="btn" type="button">TRYK FOR FLERE BILLEDER</button>
+        </div>
+      </section>
+      <section class="til_computer">
+        <img class="foto1" src="img/galleri/foto1.png" alt="foto1" />
+        <img id="foto2" src="img/galleri/foto2.png" alt="foto2" />
+        <img id="foto3" src="img/galleri/foto3.png" alt="foto3" />
+        <img id="foto4" src="img/galleri/foto4.png" alt="foto4" />
+        <img id="foto5" src="img/galleri/foto5.png" alt="foto5" />
+        <img id="foto6" src="img/galleri/foto6.png" alt="foto6" />
+        <img id="foto7" src="img/galleri/foto7.png" alt="foto7" />
+        <img id="foto8" src="img/galleri/foto8.png" alt="foto8" />
+        <img id="foto9" src="img/galleri/foto9.png" alt="foto9" />
+        <img id="foto10" src="img/galleri/foto10.png" alt="foto10" />
+        <img id="foto11" src="img/galleri/foto11.png" alt="foto11" />
+        <img id="foto12" src="img/galleri/foto12.png" alt="foto12" />
+        <img id="foto13" src="img/galleri/foto13.png" alt="foto13" />
+        <div>
+          <button class="btn" type="button">TRYK FOR FLERE BILLEDER</button>
+        </div>
       </section>
     </main>
     <footer>
