--- a/nyhedview.html
+++ b/nyhedview.html
@@ -14,12 +14,12 @@
           <li>
             <a href="index.html"><img src="img/congo-logo.png" alt="" /></a>
           </li>
-          <li><a href="">Forside</a></li>
+          <li><a href="index.html">Forside</a></li>
           <li><a href="">Støt os</a></li>
           <li><a href="">Congo</a></li>
-          <li><a href="">Nyheder</a></li>
+          <li><a href="nyheder.html">Nyheder</a></li>
           <li><a href="">Om os</a></li>
-          <li><a href="">Kontakt</a></li>
+          <li><a href="kontakt.html">Kontakt</a></li>
           <li>
             <a class="basket" href=""
               ><svg
