index er responsiv og færdigbagt

--- a/index.html
+++ b/index.html
@@ -183,14 +183,15 @@
               <div class="donation-option">300kr.</div>
               <div class="donation-option">500kr.</div>
             </div>
-            <textarea
-              class="donation-option"
-              name="donation"
-              cols="50"
-              rows="1"
-              id=""
-              placeholder="Valgfrit beløb"
-            ></textarea>
+            <div class="custom-donation">
+              <textarea
+                class="donation-option"
+                name="donation"
+                rows="1"
+                id=""
+                placeholder="Valgfrit beløb"
+              ></textarea>
+            </div>
             <div class="monthly-toggle">
               <input type="checkbox" id="monthly" />
               <label for="monthly">Gentag månedligt</label>
@@ -309,18 +310,7 @@
               <a href="" class="news-btn">Læs mere</a>
             </div>
           </article>
-          <svg
-            width="1059"
-            height="15"
-            viewBox="0 0 1059 15"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M1058.71 8.05782C1059.1 7.66656 1059.1 7.03339 1058.71 6.64361L1052.33 0.291689C1051.94 -0.0980963 1051.31 -0.0968994 1050.92 0.294362C1050.53 0.685624 1050.53 1.31879 1050.92 1.70857L1056.59 7.35472L1050.94 13.0223C1050.55 13.4135 1050.55 14.0467 1050.94 14.4365C1051.34 14.8263 1051.97 14.8251 1052.36 14.4338L1058.71 8.05782ZM0.00183105 9.35205L0.00372141 10.352L1058 8.35205L1058 7.35205L1058 6.35205L-5.93012e-05 8.35205L0.00183105 9.35205Z"
-              fill="white"
-            />
-          </svg>
+          <img class="news-arrow" src="img/news-arrow.svg" alt="" />
         </div>
         <div class="news-btn-container">
           <a href="" class="news-btn-big">Flere nyheder her</a>
