har lavet "seneste nyt" på index

--- a/index.html
+++ b/index.html
@@ -19,51 +19,36 @@
           <div class="navbar-link-container">
             <a href="index.html">forside</a>
             <div class="dropdown">
-              <button class="dropbtn">
-                Støt os
-                <i class="fa fa-caret-down"></i>
-              </button>
+              <button class="dropbtn">Støt os</button>
               <div class="dropdown-content">
-                <a href="#">Donation</a>
-                <a href="#">Webshop</a>
+                <a href="donation.html">Donation</a>
+                <a href="webshop.html">Webshop</a>
               </div>
             </div>
             <div class="dropdown">
-              <button class="dropbtn">
-                Congo
-                <i class="fa fa-caret-down"></i>
-              </button>
+              <button class="dropbtn">Congo</button>
               <div class="dropdown-content">
-                <a href="#">Billeder fra Congo</a>
-                <a href="#">Video fra Congo</a>
+                <a href="billedgalleri.html">Billeder fra Congo</a>
+                <a href="rejse.html">Video fra Congo</a>
               </div>
             </div>
-            <div class="dropdown">
-              <button class="dropbtn">
-                Nyheder
-                <i class="fa fa-caret-down"></i>
-              </button>
-              <div class="dropdown-content">
-                <a href="#">Nyheder?</a>
-                <a href="#">Besøg i Congo</a>
-              </div>
-            </div>
+            <a href="nyheder.html">Nyheder</a>
             <div class="dropdown">
               <button class="dropbtn">
                 Om os
                 <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-content">
-                <a href="#">Ambassadører</a>
-                <a href="#">Bestyrelsen</a>
-                <a href="#">Ginas Historie</a>
-                <a href="#">Vores mission</a>
+                <a href="ambassadorer.html">Ambassadører</a>
+                <a href="bestyrelsen.html">Bestyrelsen</a>
+                <a href="gina.html">Ginas Historie</a>
+                <a href="fn.html">Vores mission</a>
               </div>
             </div>
-            <a href="">kontakt</a>
+            <a href="kontakt.html">kontakt</a>
           </div>
         </div>
-        <a href=""
+        <a href="#"
           ><svg
             class="ws-menu-cart__icon-scaled"
             id="cart"
@@ -351,17 +336,45 @@
         <div class="news-container">
           <h3 class="news-subheadline">Hold dig opdateret</h3>
           <h2 class="news-headline">Seneste nyheder fra os</h2>
-          <article class="news-article">
-            <img src="img/index/news1.png" alt="" class="news-img" />
-            <div class="news-content">
-              <p class="news-text">
-                Congos Børn udvider indsatsen i Øst-DR Congo og Kinshasa med
-                nødhjælp, hygiejne og støtte til krigsramte familier, samtidig
-                med at arbejdet på børnehjemmet fortsætter.
-              </p>
-              <a href="" class="news-btn">Læs mere</a>
-            </div>
-          </article>
+          <div class="news-card-container">
+            <article class="news-article-card">
+              <img src="img/index/news1.png" alt="" class="news-img" />
+              <div class="news-content">
+                <p class="news-text tagline">
+                  Congos Børn udvider indsatsen i Øst-DR Congo og Kinshasa
+                </p>
+                <p class="news-text">
+                  Vi hjælper med hygiejne og støtte til krigsramte familier,
+                  samtidig med at arbejdet på børnehjemmet fortsætter
+                </p>
+                <a href="" class="news-btn">Læs mere</a>
+              </div>
+            </article>
+            <article class="news-article-card">
+              <img src="img/index/news2.png" alt="" class="news-img" />
+              <div class="news-content">
+                <p class="news-text tagline">En glædelig nyhed!</p>
+                <p class="news-text">
+                  Det er med stor glæde og taknemmelighed, at vi kan byde
+                  Wafande velkommen som ambassadør for Congos Børn.
+                </p>
+                <a href="" class="news-btn">Læs mere</a>
+              </div>
+            </article>
+            <article class="news-article-card">
+              <img src="img/index/news3.png" alt="" class="news-img" />
+              <div class="news-content">
+                <p class="news-text tagline">
+                  Et nyt håb for Kinshasas gadebørn
+                </p>
+                <p class="news-text">
+                  Vores mål er at give dem en reel chance for et liv væk fra
+                  gaden.
+                </p>
+                <a href="" class="news-btn">Læs mere</a>
+              </div>
+            </article>
+          </div>
           <img class="news-arrow" src="img/news-arrow.svg" alt="" />
         </div>
         <div class="news-btn-container">
