--- a/kontakt.html
+++ b/kontakt.html
@@ -69,7 +69,7 @@
     </header>
     <main>
       <section class="kontaktfoto">
-        <img src="img/kontakt.png" alt="fællesfoto" />
+        <img src="img/kontakt.webp" alt="fællesfoto" />
       </section>
       <section class="form-section">
         <article class="form-info">
