--- a/nyheder.html
+++ b/nyheder.html
@@ -73,14 +73,14 @@
         <article class="grid_2">
           <div>
             <a href="nyhedview.html">
-              <img src="img/nyhed1.png" alt="nyhed1" />
+              <img src="img/nyhed1.webp" alt="nyhed1" />
               <h6>19.08.2025</h6>
               <h3>NYE BØRN HOS VIGALEX!</h3>
             </a>
           </div>
           <div>
             <a href="nyhedview.html">
-              <img src="img/nyhed2.png" alt="nyhed2" />
+              <img src="img/nyhed2.webp" alt="nyhed2" />
               <h6>24.05.25</h6>
               <h3>SUCCESFULD DAG PÅ MARKEDDET I FREDERIKSBERG</h3>
             </a>
@@ -89,42 +89,42 @@
         <article class="grid_3">
           <div>
             <a href="nyhedview.html">
-              <img src="img/nyhed3.png" alt="nyhed3" />
+              <img src="img/nyhed3.webp" alt="nyhed3" />
               <h6>04.11.24</h6>
               <h3>MIT BESØG HOS CONGOS BØRN / VIGALEX I KINSHASA</h3>
             </a>
           </div>
           <div>
             <a href="nyhedview.html">
-              <img src="img/nyhed4.png" alt="nyhed4" />
+              <img src="img/nyhed4.webp" alt="nyhed4" />
               <h6>08.10.24</h6>
               <h3>SKOLESTART FOR BØRNENE I MAISON VIGALEX</h3>
             </a>
           </div>
           <div>
             <a href="nyhedview.html">
-              <img src="img/nyhed5.png" alt="nyhed5" />
+              <img src="img/nyhed5.webp" alt="nyhed5" />
               <h6>14.05.2024</h6>
               <h3>CONGOS BØRN PÅ FN’S CIVILSAMFUNDSKONFERENCE</h3>
             </a>
           </div>
           <div>
             <a href="nyhedview.html">
-              <img src="img/nyhed6.png" alt="nyhed6" />
+              <img src="img/nyhed6.webp" alt="nyhed6" />
               <h6>04.03.2024</h6>
               <h3>CONGOS BØRN FYLDER 1 ÅR!</h3>
             </a>
           </div>
           <div>
             <a href="nyhedview.html">
-              <img src="img/nyhed7.png" alt="nyhed7" />
+              <img src="img/nyhed7.webp" alt="nyhed7" />
               <h6>20.12.2023</h6>
               <h3>NYT BØRNEHJEM</h3>
             </a>
           </div>
           <div>
             <a href="nyhedview.html">
-              <img src="img/nyhed8.png" alt="nyhed8" />
+              <img src="img/nyhed8.webp" alt="nyhed8" />
               <h6>22.09.2023</h6>
               <h3>BESØG AF UNGE VIGALEX MEDLEMMER</h3>
             </a>
