--- a/nyhedview.html
+++ b/nyhedview.html
@@ -69,7 +69,7 @@
     </header>
     <main>
       <section class="nyhedfoto">
-        <img src="img/nyhedview_1.png" alt="1.billede" />
+        <img src="img/nyhedview_1.webp" alt="1.billede" />
       </section>
       <section class="nyhedbody">
         <h1>
@@ -87,7 +87,7 @@
         </p>
 
         <figure>
-          <img src="img/nyhedview_2.png" alt="kvinder" />
+          <img src="img/nyhedview_2.webp" alt="kvinder" />
           <figcaption class="undertekst">
             Billede lånt fra Information
           </figcaption>
@@ -106,7 +106,7 @@
           andre hygiejneprodukter er afgørende for sundhed og værdighed.
         </p>
         <figure>
-          <img src="img/nyhedview_3.png" alt="grav" />
+          <img src="img/nyhedview_3.webp" alt="grav" />
           <figcaption class="undertekst">Billede lånt fra DR</figcaption>
         </figure>
         <p>
