Fikser fn-siden

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                   </div>
                   <div class="custom-donation-modal">
                     <textarea
-                      class="donation-option"
+                      class="donation-option-text"
                       type="text"
                       rows="1"
                       placeholder="Valgfrit beløb"
