--- a/fn.html
+++ b/fn.html
@@ -3,27 +3,267 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FN</title>
-    <link rel="stylesheet" href="css/fn.css" />
     <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/fn.css" />
+    <script src="js/burgermenu.js" defer></script>
+    <script src="js/donation-popup.js" defer></script>
+    <title>FN</title>
   </head>
   <body>
+    <header>
+      <div class="navbar">
+        <div class="nav-container">
+          <a href="index.html"
+            ><img class="logo" src="img/congo-logo.png" alt=""
+          /></a>
+          <div class="navbar-link-container">
+            <a href="index.html">forside</a>
+            <div class="dropdown">
+              <button class="dropbtn">Støt os</button>
+              <div class="dropdown-content">
+                <a href="donation.html">Donation</a>
+                <a href="webshop.html">Webshop</a>
+              </div>
+            </div>
+            <div class="dropdown">
+              <button class="dropbtn">Congo</button>
+              <div class="dropdown-content">
+                <a href="billedgalleri.html">Billeder fra Congo</a>
+                <a href="rejse.html">Video fra Congo</a>
+              </div>
+            </div>
+            <a href="nyheder.html">Nyheder</a>
+            <div class="dropdown">
+              <button class="dropbtn">
+                Om os
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="ambassadorer.html">Ambassadører</a>
+                <a href="bestyrelsen.html">Bestyrelsen</a>
+                <a href="gina.html">Ginas Historie</a>
+                <a href="fn.html">Vores mission</a>
+              </div>
+            </div>
+            <a href="kontakt.html">kontakt</a>
+          </div>
+        </div>
+        <a href="#"
+          ><svg
+            class="ws-menu-cart__icon-scaled"
+            id="cart"
+            focusable="false"
+            viewBox="0 0 150 150"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M3.79976 21.25L4.60333 8.75H19.3967L20.2002 21.25H3.79976Z"
+              stroke="currentColor"
+              stroke-width="1.5"
+              transform="matrix(6,0,0,6,0,0)"
+            ></path>
+            <path
+              d="M15.5 11C15.5 6.89732 15.1411 3 12 3C8.85888 3 8.5 6.89732 8.5 11"
+              stroke="currentColor"
+              stroke-width="1.5"
+              transform="matrix(6,0,0,6,0,0)"
+            ></path>
+          </svg>
+        </a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <img src="img/burger.svg" alt="" />
+        </a>
+        <div id="burgermenu-links">
+          <a href="index.html">Forside</a>
+
+          <div class="mobile-dropdown">
+            <button
+              class="mobile-dropdown-btn"
+              onclick="toggleMobileDropdown(this)"
+            >
+              Støt os
+              <span class="arrow-icon">▼</span>
+            </button>
+            <div class="mobile-dropdown-content">
+              <a href="#">Donation</a>
+              <a href="#">Webshop</a>
+            </div>
+          </div>
+
+          <div class="mobile-dropdown">
+            <button
+              class="mobile-dropdown-btn"
+              onclick="toggleMobileDropdown(this)"
+            >
+              Congo
+              <span class="arrow-icon">▼</span>
+            </button>
+            <div class="mobile-dropdown-content">
+              <a href="#">Billeder fra Congo</a>
+              <a href="#">Video fra Congo</a>
+            </div>
+          </div>
+
+          <div class="mobile-dropdown">
+            <button
+              class="mobile-dropdown-btn"
+              onclick="toggleMobileDropdown(this)"
+            >
+              Nyheder
+              <span class="arrow-icon">▼</span>
+            </button>
+            <div class="mobile-dropdown-content">
+              <a href="#">Nyheder?</a>
+              <a href="#">Besøg i Congo</a>
+            </div>
+          </div>
+
+          <div class="mobile-dropdown">
+            <button
+              class="mobile-dropdown-btn"
+              onclick="toggleMobileDropdown(this)"
+            >
+              Om os
+              <span class="arrow-icon">▼</span>
+            </button>
+            <div class="mobile-dropdown-content">
+              <a href="#">Ambassadører</a>
+              <a href="#">Bestyrelsen</a>
+              <a href="#">Ginas Historie</a>
+              <a href="#">Vores mission</a>
+            </div>
+          </div>
+
+          <a href="">Kontakt</a>
+        </div>
+      </div>
+      <div class="donationBar">
+        <div class="donation-container">
+          <dialog class="dialog" id="dialog">
+            <form method="dialog">
+              <div class="modal-backdrop">
+                <div class="donation-modal">
+                  <h1 class="modal-title">Donation</h1>
+                  <button id="closeBtn" class="close-btn">
+                    <img class="close-btn-cross" src="img/close.svg" alt="" />
+                  </button>
+                  <p class="modal-description">
+                    Din donation gør en stor forskel for børnene på Maison
+                    VIGALEX
+                  </p>
+
+                  <div class="donation-options-modal">
+                    <div
+                      class="donation-option-modal active"
+                      onclick="selectAmount(this)"
+                    >
+                      150kr.
+                    </div>
+                    <div
+                      class="donation-option-modal"
+                      onclick="selectAmount(this)"
+                    >
+                      300kr.
+                    </div>
+                    <div
+                      class="donation-option-modal"
+                      onclick="selectAmount(this)"
+                    >
+                      500kr.
+                    </div>
+                  </div>
+                  <div class="custom-donation-modal">
+                    <textarea
+                      class="donation-option-text"
+                      type="text"
+                      rows="1"
+                      placeholder="Valgfrit beløb"
+                      onclick="selectCustom()"
+                    ></textarea>
+                  </div>
+                  <div class="monthly-toggle-modal">
+                    <input type="checkbox" id="monthly" />
+                    <label for="monthly">Gentag månedligt</label>
+                  </div>
+                  <button class="donate-submit-modal">NÆSTE →</button>
+                </div>
+              </div>
+            </form>
+          </dialog>
+          <button class="donation" id="open-btn">
+            Støt nu <img class="arrow" src="img/arrow.svg" alt="" />
+          </button>
+        </div>
+      </div>
+    </header>
     <main>
-      <section>
-        <h1>VORES MISSION HVILER PÅ 4 AF FN’S 17 VERDENSMÅL:</h1>
-      </section>
+      <h1>VÆRDIGRUNDLAG I CONGOS BØRN</h1>
       <section class="fn">
-        <div>
-          <img src="img/fn/fn1.png" alt="fn1" />
-        </div>
-        <div>
-          <img src="img/fn/fn2.png" alt="fn2" />
-        </div>
-        <div>
-          <img src="img/fn/fn3.png" alt="fn" />
-        </div>
-        <div>
-          <img src="img/fn/fn4.png" alt="fn4" />
+        <div class="goal-container">
+          <h2>
+            Foreningens formål og værdigrundlag hviler på de fire første af FN's
+            17 verdensmål:
+          </h2>
+          <div class="goal">
+            <div class="goal-img-container">
+              <img class="goal-img" src="img/fn/fn1.png" alt="fn1" />
+            </div>
+            <p class="goal-text">
+              I DR Congo lever mange gadebørn og forældreløse børn under
+              umenneskelige forhold. Hvert minut, hver time i deres hverdag
+              handler om overlevelse. Disse børn får sjældent opfyldt de mest
+              basale menneskelige behov, såsom rent drikkevand, mad, sanitet og
+              sikkerhed. Foreningen Congos børn vil bidrage til at halvere
+              antallet af gadebørn og forældreløse børn, som lever i fattigdom i
+              Demokratisk Republik Congo inden år 2030, hvilket er en del af
+              FN's verdensmål
+            </p>
+          </div>
+          <div class="goal">
+            <div class="goal-img-container">
+              <img class="goal-img" src="img/fn/fn2.png" alt="fn2" />
+            </div>
+            <p class="goal-text">
+              En stor del af alle gadebørn og forældreløse børn i DR Congo er
+              underernærede og mange sulter. Derfor vil Foreningen Congos børn
+              dyrke jord i landet og bruge landbrugsproduktionen til at ernære
+              disse børn. Desuden vil indsamlede donationer gå til fødevarer.
+            </p>
+          </div>
+          <div class="goal">
+            <div class="goal-img-container">
+              <img class="goal-img" src="img/fn/fn3.png" alt="fn" />
+            </div>
+            <p class="goal-text">
+              Dødeligheden blandt børn er høj i Demokratisk Republik Congo, men
+              den er endnu højere hos børn, som ikke har nogle voksne omkring
+              sig. Foreningen Congos børn vil fremme sundhed og trivsel hos
+              gadebørn og forældreløse børn. Dette ved at anbringe disse børn på
+              børnehjem styret af Congos børns forening. Foreningen vil sørge
+              for, at ansvarlige voksne sikrer børnene positive fysiske og
+              psykiske udvikling og sørge for, de får uddannelse og anden
+              støtte, så de vil kunne klare sig i samfundet.
+            </p>
+          </div>
+          <div class="goal">
+            <div class="goal-img-container">
+              <img class="goal-img" src="img/fn/fn4.png" alt="fn4" />
+            </div>
+            <p class="goal-text">
+              Gadebørn og forældreløse børn i Demokratisk Republik Congo har
+              ringe muligheder for at gå i grundskole og få en
+              ungdomsuddannelse, som kan sikre dem et arbejde. Congos børn vil i
+              overensstemmelse med FN's verdensmål skabe et sikkert,
+              ikkevoldeligt, inkluderende og effektivt læringsmiljø, der tager
+              hensyn til børnenes tarv, køn, og handicap. Congos børn vil sikre,
+              at gadebørn og forældreløse børn bliver undervist under trygge
+              rammer, hvor der bliver taget hensyn til børnenes fysiske,
+              psykiske og mentale udvikling. I det omfang der er muligt, vil
+              Congos børn forening, undervise gadebørn og forældreløse børn i
+              ernæring og sundhed.
+            </p>
+          </div>
         </div>
       </section>
     </main>
