--- a/nyheder.html
+++ b/nyheder.html
@@ -29,7 +29,7 @@
               <button class="dropbtn">Congo</button>
               <div class="dropdown-content">
                 <a href="billedgalleri.html">Billeder fra Congo</a>
-                <a href="rejse.html">Rejse til Congo</a>
+                <a href="rejse.html">Vores rejse til Congo</a>
               </div>
             </div>
             <a href="nyheder.html">Nyheder</a>
