--- a/fn.html
+++ b/fn.html
@@ -163,8 +163,7 @@
                   </div>
                   <div class="custom-donation-modal">
                     <textarea
-                      class="donation-option"
-                      type="text"
+                      class="donation-option-modal"
                       rows="1"
                       placeholder="Valgfrit beløb"
                       onclick="selectCustom()"
