--- a/kontakt.html
+++ b/kontakt.html
@@ -164,7 +164,6 @@
                   <div class="custom-donation-modal">
                     <textarea
                       class="donation-option"
-                      type="text"
                       rows="1"
                       placeholder="Valgfrit beløb"
                       onclick="selectCustom()"
@@ -208,7 +207,7 @@
               <input id="email" name="email" type="email" required />
             </div>
             <div class="besked">
-              <label for="bigText">BESKED*</label>
+              <label for="bigText2">BESKED*</label>
               <br />
               <textarea
                 id="bigText2"
