--- a/nyheder.html
+++ b/nyheder.html
@@ -101,7 +101,7 @@
             </button>
             <div class="mobile-dropdown-content">
               <a href="billedgalleri.html">Billeder fra Congo</a>
-              <a href="rejse.html">Vores rejse til Congo</a>
+              <a href="rejse.html">Video fra Congo</a>
             </div>
           </div>
 
@@ -164,7 +164,6 @@
                   <div class="custom-donation-modal">
                     <textarea
                       class="donation-option"
-                      type="text"
                       rows="1"
                       placeholder="Valgfrit beløb"
                       onclick="selectCustom()"
