--- a/rejse.html
+++ b/rejse.html
@@ -29,7 +29,7 @@
               <button class="dropbtn">Congo</button>
               <div class="dropdown-content">
                 <a href="billedgalleri.html">Billeder fra Congo</a>
-                <a href="rejse.html">Video fra Congo</a>
+                <a href="rejse.html">Vores rejse til Congo</a>
               </div>
             </div>
             <a href="nyheder.html">Nyheder</a>
@@ -101,7 +101,7 @@
             </button>
             <div class="mobile-dropdown-content">
               <a href="billedgalleri.html">Billeder fra Congo</a>
-              <a href="rejse.html">Vores rejse til Congo</a>
+              <a href="rejse.html">Video fra Congo</a>
             </div>
           </div>
 
@@ -164,7 +164,6 @@
                   <div class="custom-donation-modal">
                     <textarea
                       class="donation-option"
-                      type="text"
                       rows="1"
                       placeholder="Valgfrit beløb"
                       onclick="selectCustom()"
@@ -188,7 +187,7 @@
     <main>
       <section class="rejse_video">
         <video autoplay controls width="600">
-          <source src="img/Rejsen til DR Congo 2024.mp4" type="video/mp4" />
+          <source src="img/RejsentilDRCongo2024.mp4" type="video/mp4" />
         </video>
       </section>
     </main>
